I have worked on the user/admin roles. I added authentication and authorization. Also added admin controll panel page.

--- a/src/HotelBooking/Views/Shared/_Layout.cshtml
+++ b/src/HotelBooking/Views/Shared/_Layout.cshtml
@@ -37,6 +37,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+                    @{
+                        if(User.IsInRole("admin"))
+                        {
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminControllPanel">Admin Panel</a>
+                        }
+                    }
+                        
                     <partial name="_LoginPartial" />
                 </div>
             </div>
