--- a/src/HotelBooking/Views/Home/Index.cshtml
+++ b/src/HotelBooking/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
 
 <div class="container mt-5">
     <h1>Reservation Form</h1>
-    <form id="reservationForm" asp-action="ProcessReservation" asp-controller="Reservation" method="post">
+    <form id="reservationForm" asp-action="ProcessReservation" asp-controller="Reservation" method="get">
         
        
             <div class="form-group">
@@ -83,8 +83,8 @@
         
         <div class="grid-container">
             <div>
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" name="Name" required>
+                <label for="city">City:</label>
+                <input type="text" class="form-control" id="city" name="city" required>
             </div>
             <div>
                 <label for="email">Email:</label>
@@ -107,6 +107,24 @@
             <div>
                 <label for="guests">Number of Guests:</label>
                 <input type="number" class="form-control" id="guests" name="Guests" min="1" max="10" required>
+            </div>
+            <div>
+                <label for="hasPool">Pool</label>
+                <input type="checkbox" id="hasPool"/>
+                <br />
+                <label for="hasParking">Parking</label>
+                <input type="checkbox" id="hasParking"/>
+                <br />
+                <label for="hasFitness">Fitness</label>
+                <input type="checkbox" id="hasFitness"/>
+                <br />
+                <label for="hasInternet">Internet</label>
+                <input type="checkbox" id="hasInternet"/>
+                <br />
+                <label for="hasRestaurant">Restaurant</label>
+                <input type="checkbox" id="hasRestaurant" />
+
+
             </div>
         </div>
         <div class="grid-container">
