I finally finished my Api with all of its functionality. I have also worked on the construction of my services using OOP and Solid principles. To finish this day i used some creativity and worked on the front end and design. Might use some JavaScript later for animations. Next step is to add controllers for my CRUD and work more with Entity Framework.

--- a/HotelBookingApp/HotelBooking.Web/Views/Home/Hotels.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Home/Hotels.cshtml
@@ -1,43 +1,32 @@
-﻿@model HotelBooking.Services.ViewModels.ApiDataViewModel; 
-@{
-    
-}
-
+﻿@model System.Collections.Generic.List<HotelBooking.Services.ViewModels.Hotel> ;
 <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
+@{
+    foreach(var hotel in Model)
+    {
+        
+        <div class="col">
+        <div class="card h-100" >
+                    <img src="@hotel.PhotoMainUrl" class="card-img-top" alt="..." >
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">@hotel.Name</h5>
+                        <p class="card-text">@hotel.ReviewScoreWord</p>
+                        @Html.Raw(hotel.Stars)
+                        <br><br>
+                    <p class="card-text">Review Score: @hotel.ReviewScore</p>
+                        <p class="card-text">Price: <span style="color:red">@String.Format("{0:0.00}", hotel.Price)$</span></p>
+                <button type="button" class="btn btn-warning">Book</button>
             </div>
         </div>
     </div>
-    <div class="col">
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a short card.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-    </div>
+        
+    }
+}
 </div>
+
+
+
+@*Restaurant - 7*@
+@*Fitness Center - 11
+Hot tub/Jacuzzi - 63
+Parking - 181
+Fitness - 253*@
