--- a/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav id = "navbar"class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-transparent box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EasyBook</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color: mediumpurple">EasyBook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="color:lightgray;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy" style="color: lightgray">Privacy</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -37,8 +37,8 @@
         </main>
     </div>
 
-    <footer class="bg-dark text-light pt-5 pb-3">
-        <div class="container">
+@*    <footer class="bg-dark text-light pt-5 pb-3">*@
+        <div id="footer" class="container">
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <h5 class="text-uppercase">About Our App</h5>
@@ -55,21 +55,22 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="text-uppercase">Follow Us</h5>
                     <ul class="list-unstyled">
-                        <li><a href="">Facebook</a></li>
-                        <li><a href="">Twitter</a></li>
-                        <li><a href="">Instagram</a></li>
-                        <li><a href="">LinkedIn</a></li>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>LinkedIn</li>
                     </ul>
                 </div>
+            </div>
+            
             </div>
             <div class="row mt-3">
                 <div class="col-md-12">
                     <hr class="bg-light">
                     <p color="white" class="text-center">&copy; 2023 Booking Hotels App. All Rights Reserved.</p>
                 </div>
-            </div>
         </div>
-    </footer>
+@*    </footer>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
