--- a/HotelBookingApp/HotelBooking.Web/Views/Home/BookedHotels.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Home/BookedHotels.cshtml
@@ -1,7 +1,11 @@
 ﻿@using HotelBooking.Models.AppModels
 @using HotelBooking.Services.ViewModels
 @model UserBookedHotels
+
+<button type="submit" class="btn btn-success" style="background:green;margin-left:84.5%; margin-bottom: 1%; width: 200px;">Check out</button>
+
 <div class="row row-cols-1 row-cols-md-3 g-4">
+    
     @{
         foreach (var booking in Model.Bookings)
         {
@@ -17,11 +21,13 @@
                                 <p class="card-text"><span>Dates: </span><span class="start">@booking.StartAt</span><span>-</span><span class="end">@booking.EndAt</span></p>
                                 <p class="card-text">Price: <span style="color:red">@String.Format("{0:0.00}", booking.Price)$</span></p>
 
-                                <button type="submit" class="btn btn-success" style="background: green">Check out</button>
-                                <button type="submit" class="btn btn-danger" style="background:darkred">Remove</button>
+                                
+                                
+                                <br><br>
 
                                 <form asp-controller="RemoveHotelFromCart" asp-action="Index" method="post">
                                     <input type="hidden" name="BookingId" value="@booking.Id" />
+                                    <button type="submit" class="btn btn-danger" style="background:darkred">Remove</button>
                                 </form>
                             </div>
                         </div>
@@ -31,8 +37,7 @@
         }
     }
 </div>
-<style>
-    span{
-        color: black;
-    }
-</style>
+
+
+
+
