--- a/HotelBookingApp/HotelBooking.Web/Views/Home/BookedHotels.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Home/BookedHotels.cshtml
@@ -2,10 +2,16 @@
 @using HotelBooking.Services.ViewModels
 @model UserBookedHotels
 <form asp-controller="Checkout" asp-action="CheckoutHotels" method="post">
-    
-            <input type="hidden" name="bookings" value="@Model.Bookings" />
-        }
-    
+    @for (int i = 0; i < Model.Bookings.Count; i++)
+    {
+        <input type="hidden" name="bookings[@i].Id" value="@Model.Bookings[i].Id" />
+        <input type="hidden" name="bookings[@i].StartAt" value="@Model.Bookings[i].StartAt" />
+        <input type="hidden" name="bookings[@i].EndAt" value="@Model.Bookings[i].EndAt" />
+        <input type="hidden" name="bookings[@i].Price" value="@Model.Bookings[i].Price" />
+        <input type="hidden" name="bookings[@i].HotelModel" value="@Model.Bookings[i].HotelModel" />
+        <input type="hidden" name="bookings[@i].HotelModelId" value="@Model.Bookings[i].HotelModelId" />
+    }
+
     <button type="submit" class="btn btn-success" style="background:green;margin-left:84.5%; margin-bottom: 1%; width: 200px;">Check out</button>
 </form>
 
@@ -43,7 +49,3 @@
         }
     }
 </div>
-
-
-
-
