--- a/HotelBookingApp/HotelBooking.Web/Views/Home/Index.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
 
 <div class="container mt-5">
     <h1>Reservation Form</h1>
-    <form id="reservationForm" asp-action="Hotels" asp-controller="Home" method="post">
+    <form id="reservationForm" asp-action="HotelsSearch" asp-controller="Hotels" method="post">
 
 
         <div class="form-group">
