--- a/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
+++ b/HotelBookingApp/HotelBooking.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     </ul>
                     @if (User.IsInRole("Admin"))
                     {
-                    <a class="nav-link" style="color: lightgray; " asp-controller="Home" asp-action="AdminPanel">Admin panel</a>
+                    <a class="nav-link" style="color: lightgray; " asp-controller="AdminPanel" asp-action="GetCheckoutedHotels">Admin panel</a>
                     }
 
                    
